--- a/.env
+++ b/.env
@@ -16,7 +16,7 @@ LOG_LEVEL=debugww
 # DB_PASSWORD=password
 ##postgres sql
 DB_CONNECTION=pgsql
-DB_HOST=104.251.217.92
+DB_HOS
 DB_PORT=5432
 DB_DATABASE=postgres
 DB_USERNAME=postgres
