--- a/.env
+++ b/.env
@@ -8,19 +8,19 @@ LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debugww
 
-# DB_CONNECTION=mysql
-# DB_HOST=mysql
-# DB_PORT=3306
-# DB_DATABASE=webserver
-# DB_USERNAME=sail
-# DB_PASSWORD=password
+DB_CONNECTION=mysql
+DB_HOST=mysql
+DB_PORT=3306
+DB_DATABASE=webserver
+DB_USERNAME=sail 
+DB_PASSWORD=password
 ##postgres sql
-DB_CONNECTION=pgsql
-DB_HOS
-DB_PORT=5432
-DB_DATABASE=postgres
-DB_USERNAME=postgres
-DB_PASSWORD=postgres
+# DB_CONNECTION=pgsql
+# DB_HOST=104.251.217.92
+# DB_PORT=5432
+# DB_DATABASE=postgres
+# DB_USERNAME=postgres
+# DB_PASSWORD=postgres
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
