--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "vue-loader": "^17.0.0"
     },
     "dependencies": {
+        "@ant-design/icons": "^4.7.0",
         "@babel/preset-react": "^7.17.12",
         "@headlessui/react": "^1.6.4",
         "@heroicons/react": "^1.0.6",
