--- a/.env
+++ b/.env
@@ -16,7 +16,7 @@ LOG_LEVEL=debugww
 # DB_PASSWORD=password
 ##postgres sql
 DB_CONNECTION=pgsql
-DB_HOST=154.53.43.42
+DB_HOST= database
 DB_PORT=5432
 DB_DATABASE=postgres
 DB_USERNAME=postgres
