--- a/.env
+++ b/.env
@@ -14,9 +14,9 @@ LOG_LEVEL=debugww
 # DB_DATABASE=webserver
 # DB_USERNAME=sail 
 # DB_PASSWORD=password
-##postgres sql
+#postgres sql
 DB_CONNECTION=pgsql
-DB_HOST= database
+DB_HOST=database
 DB_PORT=5432
 DB_DATABASE=postgres
 DB_USERNAME=postgres
