--- a/.env
+++ b/.env
@@ -22,6 +22,8 @@ DB_DATABASE=postgres
 DB_USERNAME=postgres
 DB_PASSWORD=postgres
 
+DB_ELASTIC=localhost
+
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 FILESYSTEM_DISK=local
