update giám đốc kiểm tra

--- a/.env
+++ b/.env
@@ -22,7 +22,7 @@ DB_DATABASE=postgres
 DB_USERNAME=postgres
 DB_PASSWORD=postgres
 
-DB_ELASTIC=localhost
+DB_ELASTIC=127.0.0.1
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
