--- a/.env
+++ b/.env
@@ -10,19 +10,19 @@ LOG_LEVEL=debugww
 
 # DB_CONNECTION=mysql
 # DB_HOST=mysql
-# DB_PORT=3306
+# DB_PORT=5432
 # DB_DATABASE=webserver
 # DB_USERNAME=sail 
 # DB_PASSWORD=password
-#postgres sql
+# postgres sql
 DB_CONNECTION=pgsql
-DB_HOST=database
+DB_HOST=192.168.110.77
 DB_PORT=5432
 DB_DATABASE=postgres
 DB_USERNAME=postgres
 DB_PASSWORD=postgres
 
-DB_ELASTIC=127.0.0.1
+DB_ELASTIC=192.168.110.77
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
