--- a/package.json
+++ b/package.json
@@ -25,9 +25,12 @@
     "dependencies": {
         "@ant-design/icons": "^4.7.0",
         "@babel/preset-react": "^7.17.12",
+        "@emotion/react": "^11.10.6",
+        "@emotion/styled": "^11.10.6",
         "@headlessui/react": "^1.6.4",
         "@heroicons/react": "^1.0.6",
         "@inertiajs/inertia-react": "^0.8.0",
+        "@mui/material": "^5.11.12",
         "antd": "^4.22.2",
         "browser-sync": "^2.27.10",
         "browser-sync-webpack-plugin": "^2.3.0",
